# social-media-data-auto-collect

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  cli.py  pyproject.toml
configs/: bilibili.yaml  douyin.yaml  kuaishou.yaml  weibo.yaml
docs/: 项目说明.md
docs/adr/: 0001-platform-abstraction.md  0002-cookie-strategy.md  0003-no-historical-metrics.md  0004-excel-column-fidelity.md
docs/superpowers/plans/: 2026-06-08-新媒体采集流水线.md  2026-06-16-采集体验提升.md  2026-06-17-多账号规模化并行采集.md
docs/superpowers/specs/: 2026-06-08-新媒体采集流水线-design.md  2026-06-16-采集体验提升-design.md  2026-06-17-多账号规模化并行采集-design.md
infra/: collector.cron  com.fudan.collector.daily.plist  com.fudan.collector.weekly.plist  install.ps1  install.sh
src/collector/: accounts.py  base.py  bilibili.py  cookies.py  douyin.py  kuaishou.py  registry.py  rendering.py  schemas.py  status.py  storage.py  weibo.py
src/collector/login/: __init__.py  bilibili.py  common.py  douyin.py  kuaishou.py  weibo.py
src/collector/signing/: bilibili_wbi.py  douyin_abogus.py
tests/: conftest.py  test_accounts.py  test_base.py  test_bilibili_wbi.py  test_cli_smoke.py  test_collect_parallel.py  test_cookies.py  test_douyin_abogus.py  test_parsers.py  test_render_selection.py  test_rendering.py  test_schemas.py  test_status.py  test_storage.py
tests/fixtures/: import_sample.csv  import_sample.xlsx
tests/fixtures/bilibili/: sample_response.json
tests/fixtures/douyin/: sample_response.json
tests/fixtures/kuaishou/: sample_response.json
tests/fixtures/weibo/: sample_response.json
