[project]
name = "collector"
version = "0.1.0"
description = "四平台新媒体内容采集流水线"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selenium>=4.20",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
cli = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
